[build-system]
requires = ["setuptools>=59", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafana-utils"
version = "0.1.0"
description = "Grafana dashboard and alerting export/import utilities."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [{ name = "kendlee" }]
dependencies = [
  "requests>=2.27,<3",
]

[project.optional-dependencies]
http2 = [
  "httpx[http2]>=0.27,<1; python_version >= '3.8'",
]

[project.scripts]
grafana-utils = "grafana_utils.dashboard_cli:main"
grafana-alert-utils = "grafana_utils.alert_cli:main"
grafana-access-utils = "grafana_utils.access_cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["grafana_utils"]
