[build-system]
requires = ["setuptools>=59", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafana-util"
version = "0.1.0"
description = "Grafana dashboard and alerting export/import utilities."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "kendlee" }]
dependencies = [
  "requests>=2.27,<3",
]

[project.optional-dependencies]
http2 = [
  "httpx[http2]>=0.27,<1",
]

[project.scripts]
grafana-util = "grafana_utils.unified_cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["grafana_utils", "grafana_utils.*"]
